--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,8 @@ body {
     background-color: #001400;
     color:#C0C0C0;
 }
-h1 {
-  font-size: 3.0em;
-  line-height: 1.0em;
-  font-weight: 700;
-  padding: 4px 0 0 20px;
-  text-align: center;
+h3 {
+  padding-bottom: 10px;
 }
 li {
   list-style-type: none;
@@ -57,6 +53,9 @@ audio {
 }
 
 /* Page Level */
+#top-songs {
+  display: none;
+}
 #music-container {
   margin: 0;
   padding: 0;
